cmake_minimum_required(VERSION 3.21)
project(code)

set(CMAKE_CXX_STANDARD 17)
##set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCMAKE_EXPORT_COMPILE_COMMANDS=1")
##set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -g")

add_executable(meituan1 miscellaneous/meituan1.cpp)
add_executable(meituan4 miscellaneous/meituan4.cpp)
add_executable(meituan11 miscellaneous/meituan11.cpp)
add_executable(meituan3 miscellaneous/meituan3.cpp)
add_executable(meituan5 miscellaneous/meituan5.cpp)
add_executable(1012-NumbersWithRepeatedDigits leetcode/1012-NumbersWithRepeatedDigits.cpp)
add_executable(1011-CapacityToShipPackagesWithinDDays leetcode/1011-CapacityToShipPackagesWithinDDays.cpp)
add_executable(1010-PairsOfSongs leetcode/1010-PairsOfSongs.cpp)
add_executable(2594-MinimumTime leetcode/2594-MinimumTime.cpp)
add_executable(tencent miscellaneous/tencent.cpp)
add_executable(1638-CountSubstringsThatDifferByOneCharacter leetcode/1638-CountSubstringsThatDifferByOneCharacter.cpp)