cmake_minimum_required(VERSION 3.21)

project(code)


set(CMAKE_CXX_STANDARD 17)
set (CMAKE_GENERATOR "Ninja" CACHE INTERNAL "" FORCE)
#set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
#set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
##set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCMAKE_EXPORT_COMPILE_COMMANDS=1")
##set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -g")

add_executable(meituan1 miscellaneous/meituan1.cpp)
add_executable(meituan4 miscellaneous/meituan4.cpp)
add_executable(meituan11 miscellaneous/meituan11.cpp)
add_executable(meituan3 miscellaneous/meituan3.cpp)
add_executable(meituan5 miscellaneous/meituan5.cpp)
add_executable(1012-NumbersWithRepeatedDigits leetcode/1012-NumbersWithRepeatedDigits.cpp)
add_executable(1011-CapacityToShipPackagesWithinDDays leetcode/1011-CapacityToShipPackagesWithinDDays.cpp)
add_executable(1010-PairsOfSongs leetcode/1010-PairsOfSongs.cpp)
add_executable(2594-MinimumTime leetcode/2594-MinimumTime.cpp)
add_executable(tencent miscellaneous/tencent.cpp)
add_executable(1638-CountSubstringsThatDifferByOneCharacter leetcode/1638-CountSubstringsThatDifferByOneCharacter.cpp)
add_executable(baidu miscellaneous/baidu.cpp)
add_executable(xiecheng miscellaneous/xiecheng.cpp)
add_executable(risingwave miscellaneous/risingwave.cpp)
add_executable(pdd miscellaneous/pdd.cpp)
add_executable(pdd2 miscellaneous/pdd2.cpp)
add_executable(paypal miscellaneous/paypal.cpp)
add_executable(dolphin3 miscellaneous/dolphin3.cpp)
add_executable(dolphin2 miscellaneous/dolphin2.cpp)
add_executable(dolphin1 miscellaneous/dolphin1.cpp)
add_executable(zhaoshang miscellaneous/zhaoshang.cpp)
add_executable(zhaoshang2 miscellaneous/zhaoshang2.cpp)
add_executable(ant2 miscellaneous/ant2.cpp)
add_executable(834-SumOfDistanceInTree leetcode/834-SumOfDistanceInTree.cpp)
add_executable(460 leetcode/460-LFU.cpp)
add_executable(2251 leetcode/2251.cpp)
add_executable(2603 leetcode/2603.cpp)
add_executable(2512-RemoveTopKStudents leetcode/2512-RemoveTopKStudents.cpp)
add_executable(baidu1 miscellaneous/baidu1.cpp)
add_executable(baidu2 miscellaneous/baidu2.cpp)
add_executable(2034-StockPriceFluctuation leetcode/2034-StockPriceFluctuation.cpp)
add_executable(188-BestTimeToBuyStockIV leetcode/188-BestTimeToBuyStockIV.cpp)
add_executable(2698-FindThePunishmentNumber leetcode/2698-FindThePunishmentNumber.cpp)
add_executable(1726-TupleWithSameProduct leetcode/1726-TupleWithSameProduct.cpp)